fix z-index

--- a/modules/main.css
+++ b/modules/main.css
@@ -144,6 +144,7 @@ input {
     overflow: hidden;
     opacity: 0;
     transition: all 150ms ease-in;
+    z-index: 98;
 }
 
 .search__wrapper {
